public/css/style.css
body {
    padding-top: 50px
}
#login, #upload {
  margin-top: 155px;
}

th.prev, th.next, td.day {
	cursor: pointer;
}

.page-header {
  border-bottom: 0px;
}

.search-users {
    padding-bottom: 8px;
    margin: 36px 0 18px;
}
.new-user {
    padding-bottom: 8px;
    margin: 58px 0 18px;
}

.users-hr {
  margin-top: -30px;
}

#ConfirmPasswordLabel {
  display: none
}

.green {
    margin-left: 5px;
    color: green;
}
.red {
    margin-left: 5px;
    color: red;
}

.new-group {
    margin-top: 55px;
}

.alert-success {
  display: none;
}

.chooseGroupUser {
  margin-top: 7px;
}

.overlay {
    display: none;
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    background: #fcfcfc;
    opacity: 0.8;
    filter: alpha(opacity=80);
    z-index: 999;
}
.spinner {
    width: 42px;
    height: 42px;
    position: absolute;
    top: 50%;
    left: 50%;
    
}
.active {
  color: #d9230f;
  text-decoration: none;
}
thead{
 background-color: #c1c0c0;
}
td.wrap{
width: 200px;
 overflow-wrap: break-word;
  word-wrap: break-word;

  -ms-word-break: break-all;
  /* This is the dangerous one in WebKit, as it breaks things wherever */
  word-break: break-all;
  /* Instead use this non-standard one: */
  word-break: break-word;

  /* Adds a hyphen where the word breaks, if supported (No Blink) */
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}

body button{
  border-radius:0!important;
  box-shadow:none!important;
  border:1px solid #eaeaea;
  padding:10px;
  min-width:200px
}

body form input[type=date],body form input[type=email],body form input[type=password],body form input[type=text],body form select{
  border-radius:0!important;
  box-shadow:none!important;
  border:1px solid #eaeaea;
  padding:10px;width:100%
}

body form button,body form input[type=submit]{
  border-radius:0!important;
  box-shadow:none!important;
  border:1px solid #eaeaea;
  padding:10px;
  min-width:200px
}

body .pagination a {
  padding: 10px;
  cursor: pointer;
}

body .pagination a.active {
  background: #eaeaea;
}

#pending_task {
  margin-top: 13px;
}

table tr td.table-inputs {
  width: 110px;
  display: block;
}

footer {
  background: #666;
  color: #fff;
  font-size: 14px;
  padding:15px 0;
  position: fixed;
  bottom: 0;
  width: 100%;
  text-align: center;
}

#loginName {
  cursor: text;
  text-align: center !important;
}
.main-container{
  padding-bottom: 50px;
}

#save_btn {
  margin-top: -75px;
}

ul.view_task_pagination {
    display: inline-block;
    padding: 0;
    margin: 0;
}

ul.view_task_pagination li {display: inline;}

ul.view_task_pagination li a {
    color: black;
    float: left;
    padding: 8px 16px;
    text-decoration: none;
}

ul.view_task_pagination li.active a {
    color: #d9230f;
}

ul.audit_task_pagination {
    display: inline-block;
    padding: 0;
    margin: 0;
}

ul.audit_task_pagination li {display: inline;}

ul.audit_task_pagination li a {
    color: black;
    float: left;
    padding: 8px 16px;
    text-decoration: none;
}

ul.audit_task_pagination li.active a {
    color: #d9230f;
}

